--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   "dependencies": {
     "lodash.isequal": "^4.5.0",
     "prop-types": "^15.6.0",
-    "swipe-js-iso": "^2.1.5"
+    "swipe-js-iso": "git://github.com/sprucelabsai/swipe-js-iso#aad192b46a031309d9d0f1b69fb4a3640002713b"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
